<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:padding="@dimen/activity_horizontal_margin"
    android:background="@color/mater_grey_300"
    tools:ignore="UselessParent"
    tools:context=".ui.ElectronicsDetailActivity">

    <ImageView
        android:id="@+id/detail_product_image"
        android:contentDescription="@string/electronics"
        android:scaleType="fitCenter"
        android:layout_width="match_parent"
        android:layout_height="300dp"/>

    <LinearLayout
        android:layout_marginTop="@dimen/horizontal_20"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <TextView
            android:id="@+id/detail_product_title"
            android:maxLines="2"
            android:ellipsize="end"
            android:textSize="20sp"
            android:text="@string/electronics"
            android:fontFamily="sans-serif-black"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_product_color"
            android:layout_marginTop="8dp"
            android:text="@string/color_color"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_product_number"
            android:layout_marginTop="8dp"
            android:text="@string/walmart_number_1231"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
        <TextView
            android:id="@+id/detail_product_description"
            android:layout_marginTop="8dp"
            android:text="@string/item_description_nasdfad"
            android:fontFamily="sans-serif"
            android:textSize="16sp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"/>
    </LinearLayout>



</LinearLayout>