<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingTop="30dp"
    android:paddingBottom="30dp"
    tools:ignore="UselessParent"
    tools:context=".ui.RegisterActivity">

    <ImageView
        android:id="@+id/imageView"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:layout_marginStart="16dp"
        android:layout_marginEnd="16dp"
        android:contentDescription="@string/app_name"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.303"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/walmart_logo"
        tools:ignore="MissingConstraints" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="@dimen/activity_horizontal_margin"
        android:layout_marginTop="@dimen/activity_horizontal_margin"
        android:layout_marginEnd="@dimen/activity_horizontal_margin"
        android:layout_marginBottom="@dimen/activity_horizontal_margin"
        android:fontFamily="sans-serif-medium"
        android:text="@string/create_your_account"
        android:textAlignment="center"
        android:textSize="24sp" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginLeft="40dp"
        android:layout_marginRight="40dp"
        android:paddingTop="20dp"
        android:paddingBottom="20dp"
        app:cardCornerRadius="7dp"
        app:cardElevation="22dp">

        <LinearLayout
            android:layout_margin="8dp"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/horizontal_20"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/first_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_first_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:fontFamily="sans-serif-light"
                android:gravity="center|start|bottom"
                android:inputType="text"
                android:maxLength="50"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/last_name"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_last_name"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_password"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:inputType="text"
                android:maxLength="50"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/email_address"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_email_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_password"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:inputType="textEmailAddress"
                android:maxLength="50"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/activity_horizontal_margin"
                android:layout_marginTop="@dimen/activity_horizontal_margin"
                android:layout_marginEnd="@dimen/activity_horizontal_margin"
                android:fontFamily="sans-serif-condensed-light"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:text="@string/password"
                android:textSize="14sp" />

            <EditText
                android:id="@+id/et_register_password"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginStart="20dp"
                android:layout_marginTop="4dp"
                android:layout_marginEnd="20dp"
                android:autofillHints="@string/activity_login_auto_hint_password"
                android:background="@drawable/input_bg_curved_grey"
                android:cursorVisible="true"
                android:gravity="center|start|bottom"
                android:inputType="textPassword"
                android:maxLength="50"
                android:paddingStart="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/vertical_margin_8"
                android:paddingEnd="@dimen/activity_horizontal_margin"
                android:paddingBottom="@dimen/vertical_margin_8"
                android:textColor="@color/black_effective"
                android:textSize="18sp" />

            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginStart="20dp"
                android:layout_marginTop="20dp"
                android:layout_marginEnd="20dp"
                android:layout_marginBottom="20dp"
                android:background="@drawable/btn_bg_curved_stroke"
                android:text="@string/create_account"
                android:onClick="onCreateAccount"
                android:textAllCaps="false"
                android:textColor="@color/white"
                android:textSize="18sp" />

        </LinearLayout>

    </androidx.cardview.widget.CardView>

</LinearLayout>